syntax = "proto3";

package proto;

option go_package = "./;proto";

//GreetRequest Message 

message GreetRequest {
  string first_name = 1;
  string last_name = 2;
}

message GreetResponse {
  string response = 1;
}

service Greet {
  rpc GreetMe(GreetRequest) returns (GreetResponse) {}
}